--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/hideGovernment.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/hideGovernment.yml
@@ -1,1 +1,4 @@
-question: Can you, if asked, recruit participants without revealing details of the government department or agency you're working with?
+question: >
+  Can you, if asked, recruit participants without revealing details of the
+  government department or agency you're working with?
+type: boolean
