--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/termsAndConditions.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/termsAndConditions.yml
@@ -1,2 +1,2 @@
-question: Do you accept, without amendment or qualification, the terms and conditions as set out in the framework agreement and call-off contract documents?
+question: Do you accept the terms and conditions as described in the framework agreement and call-off contract documents?
 type: boolean
