--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/termsOfParticipation.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/termsOfParticipation.yml
@@ -1,2 +1,2 @@
-question: Do you accept the terms of participation as described in the framework agreement and call-off contract documents?
+question: Do you accept the terms of participation as described in the [framework agreement and call-off contract documents](/suppliers/frameworks/digital-outcomes-and-specialists/files/digital-outcomes-and-specialists-supplier-pack.zip)?
 type: boolean
