--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/understandTool.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/understandTool.yml
@@ -1,2 +1,2 @@
-question: Do you understand that you must complete both the supplier declaration and add at least one specialist, outcome, user research studios or user research participants service before your application to Digital Outcomes and Specialists can be considered?
+question: Do you understand that you must complete both the supplier declaration and add at least one service before your application to Digital Outcomes and Specialists can be considered?
 type: boolean
