--- a/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
@@ -13,6 +13,7 @@
     - skillsAndResources
     - canProvideServices
     - accuratelyDescribed
+    - employersInsurance
 
 -
   name: Grounds for mandatory exclusion
