--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/environmentallyFriendly.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/environmentallyFriendly.yml
@@ -1,2 +1,3 @@
 question: Do you operate in an environmentally-friendly way?
 type: boolean
+hint: Answer 'yes' if your organisation engages in working practices like recycling or carbon offsetting. 
