--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/safeguardOfficialInformation.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/safeguardOfficialInformation.yml
@@ -1,2 +1,2 @@
-question: Do you agree to respect government official security classifications and safeguard official government information, eg by not revealing that government is the client when advertising for participants?
+question: Do you agree to respect [government security classifications](https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/251480/Government-Security-Classifications-April-2014.pdf) and safeguard official government information, eg by not revealing that government is the client when advertising for participants?
 type: boolean
