--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/publishContracts.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/publishContracts.yml
@@ -1,2 +1,2 @@
-question: "Are you willing to publish contracts according to [government policy](https://www.gov.uk/service-manual)?"
+question: "Are you willing to [publish contracts according to government policy](https://www.gov.uk/government/publications/transparency-requirements-for-publishing-on-contracts-finder)?"
 type: boolean
