--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/registeredVATNumber.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/registeredVATNumber.yml
@@ -1,3 +1,3 @@
 question: What is your organisation’s registered VAT number?
 type: text
-hint: There are either 9 or 12 characters in a VAT number.
+hint: There are typically either 9 or 12 characters in a VAT number. Enter N/A if you don't have a VAT number.
