--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/licenceOrMemberRequired.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/licenceOrMemberRequired.yml
@@ -1,9 +1,7 @@
 question: >
-  Please confirm if, to provide the services specified in this procurement,
-  it’s a legal requirement in the state where you’re established to be:
+  Please confirm if, to provide the services specified in this procurement, it’s a legal requirement in the state where you’re established to be:
 type: radios
 options:
   - label: licensed
   - label: a member of a relevant organisation
-  - label: other
-hint: Answer 'other' if your business was established in the UK.
+  - label: none of the above
