--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/termsOfParticipation.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/termsOfParticipation.yml
@@ -1,2 +1,2 @@
-question: Do you accept the terms of participation as described in the [framework agreement and call-off contract documents](/suppliers/frameworks/digital-outcomes-and-specialists/files/digital-outcomes-and-specialists-supplier-pack.zip)?
+question: Do you agree to comply with the terms of the [Digital Outcomes and Specialists invitation to tender](/suppliers/frameworks/digital-outcomes-and-specialists/files/digital-outcomes-and-specialists-supplier-pack.zip)?
 type: boolean
