--- a/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
@@ -5,6 +5,11 @@
     - termsOfParticipation
     - termsAndConditions
     - davidKershaw
+    - sufficientInformation
+    - InformationChanges
+    - requisiteAuthority
+    - subcontractorInformation1
+    - subcontractorInformation2
     - readUnderstoodGuidance
     - understandTool
     - understandHowToAskQuestions
