--- a/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
@@ -6,7 +6,7 @@
     - termsAndConditions
     - davidKershaw
     - sufficientInformation
-    - InformationChanges
+    - informationChanges
     - requisiteAuthority
     - subcontractorInformation1
     - subcontractorInformation2
