--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/openStandardsPrinciples.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/openStandardsPrinciples.yml
@@ -1,2 +1,2 @@
-question: (Does this duplicate or overlap with 18.6?) Do you support the government’s [open standards principles](https://www.gov.uk/service-manual/making-software/open-standards-and-licensing.html#building-on-open-standards) and the implementation of open standards selected for use across government?
+question: Do you support the government’s [open standards principles](https://www.gov.uk/government/publications/open-standards-principles/open-standards-principles) and the implementation of [open standards selected for use across government](http://standards.data.gov.uk/challenges/adopted)?
 type: boolean
