--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/governmentSecurityPrinciples.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/governmentSecurityPrinciples.yml
@@ -1,2 +1,2 @@
-question: Do you support the [government’s security principles](https://www.gov.uk/guidance/digital-and-technology-skills/cyber-security-and-information-assurance), which should allow the use of services which are built on [open standards](https://www.gov.uk/government/publications/open-standards-for-government) and reusable, open-source components?
+question: Do you support the [government’s security classifications](https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/251480/Government-Security-Classifications-April-2014.pdf), which should allow the use of services which are built on [open standards](https://www.gov.uk/government/publications/open-standards-for-government) and reusable, open-source components?
 type: boolean
