--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/skillsAndResources.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/skillsAndResources.yml
@@ -1,2 +1,2 @@
-question: Do you confirm that your organisation has the skills and resources to deliver and support the services that you're submitting for Digital Outcomes and Specialists?
+question: Does your organisation have the skills and resources to deliver and support the services that you're submitting for Digital Outcomes and Specialists?
 type: boolean
