--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/canProvideServices.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/canProvideServices.yml
@@ -1,2 +1,2 @@
-question: Do you confirm that you can provide services in at least one lot as defined in the framework agreement?
+question: Can you provide services in at least 1 lot as defined in the framework agreement?
 type: boolean
