--- a/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
@@ -24,16 +24,16 @@
   name: Grounds for mandatory exclusion
   editable: True
   description: >
-    You must select 'no' for every question in Section C for your bid to be
-    considered eligible. If you cannot answer 'no' to every question in this
+    You must be able to truthfully answer 'no' to every question in 'Grounds for mandatory exclusion' for your bid to be
+    considered eligible. If you can't answer 'no' to every question in this
     section, it is very unlikely that your bid will be accepted.
 
 
-    Organisation representatives include: members of your group of economic
+    In questions [[conspiracyCorruptionBribery]] to [[organisedCrime]], 'anyone who represents your organisation' includes members of your group of economic
     operators, their proposed subcontractors, and any directors, partners, or
     any other person who has powers of representation, decision or control.
-    Check that your organisation complies with Regulation 57(1) of the Public
-    Contracts Regulations 2015.
+    Check that your organisation complies with [Regulation 57(1) of the Public
+    Contracts Regulations 2015](http://www.legislation.gov.uk/uksi/2015/102/regulation/57/made).
   questions:
     - conspiracyCorruptionBribery
     - fraudAndTheft
@@ -43,22 +43,21 @@
   name: Grounds for discretionary exclusion
   editable: True
   description: >
-    You should select 'no' to every question for your bid to be considered
-    eligible. If you select 'yes', your bid may not be accepted. If you do select
+    You must be able to truthfully answer 'no' to every question in 'Grounds for discretionary exclusion' for your bid to be considered
+    eligible. If you can't answer 'yes', your bid may not be accepted. If you do answer
     'yes', you must provide full details of any subsequent event or remedial
-    action that you think the authority should take into consideration. The
-    authority will use the information you provide to consider whether or not
+    action that you think the Crown Commercial Service (CCS) should take into consideration. CCS will use the information you provide to consider whether or not
     you will be able to proceed any further with this procurement.
 
 
-    In questions Cross check numbers, partner organisations include: members
+    In questions [[taxEvasion]] to [[misleadingInformation]], 'partner organisations' include members
     of your group of economic operators or their proposed subcontractors.
 
 
     The authority is also entitled to exclude you if you are guilty of serious
     misrepresentation in providing any information referred to within
-    regulations 23, 24, 25, 27 or 27 of the Public Contracts Regulations 2015
-    or if you fail to provide any such information requested by the authority.
+    regulations [23](http://www.legislation.gov.uk/uksi/2015/102/regulation/23/made), [24](http://www.legislation.gov.uk/uksi/2015/102/regulation/24/made), [25](http://www.legislation.gov.uk/uksi/2015/102/regulation/25/made), [26]((http://www.legislation.gov.uk/uksi/2015/102/regulation/26/made) or [27]((http://www.legislation.gov.uk/uksi/2015/102/regulation/27/made) of the [Public Contracts Regulations 2015](http://www.legislation.gov.uk/uksi/2015/102/contents/made)
+    or if you fail to provide any such information requested by CCS.
   questions:
     - taxEvasion
     - environmentalSocialLabourLaw
