--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/sufficientInformation.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/sufficientInformation.yml
@@ -1,6 +1,4 @@
 question: >
-  Please confirm that you agree:
-  
-    - to have gathered sufficient information to fully understand the requirements of this procurement 
+  Do you agree to have gathered sufficient information to fully understand the requirements of this procurement? 
    
 type: boolean
