--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/informationChanges.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/informationChanges.yml
@@ -1,5 +1,4 @@
 question: >
-  Please confirm that you agree:
-    - that you'll inform the Crown Commercial Service as soon as possible if there are any changes to the information you've provided
+  Do you agree to inform the Crown Commercial Service as soon as possible if there are any changes to the information you've provided?
 type: boolean
 
