--- a/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
@@ -56,7 +56,13 @@
 
     The authority is also entitled to exclude you if you are guilty of serious
     misrepresentation in providing any information referred to within
-    regulations [23](http://www.legislation.gov.uk/uksi/2015/102/regulation/23/made), [24](http://www.legislation.gov.uk/uksi/2015/102/regulation/24/made), [25](http://www.legislation.gov.uk/uksi/2015/102/regulation/25/made), [26]((http://www.legislation.gov.uk/uksi/2015/102/regulation/26/made) or [27]((http://www.legislation.gov.uk/uksi/2015/102/regulation/27/made) of the [Public Contracts Regulations 2015](http://www.legislation.gov.uk/uksi/2015/102/contents/made)
+    regulations
+    [23](http://www.legislation.gov.uk/uksi/2015/102/regulation/23/made),
+    [24](http://www.legislation.gov.uk/uksi/2015/102/regulation/24/made),
+    [25](http://www.legislation.gov.uk/uksi/2015/102/regulation/25/made),
+    [26](http://www.legislation.gov.uk/uksi/2015/102/regulation/26/made) or
+    [27](http://www.legislation.gov.uk/uksi/2015/102/regulation/27/made)
+    of the [Public Contracts Regulations 2015](http://www.legislation.gov.uk/uksi/2015/102/contents/made)
     or if you fail to provide any such information requested by CCS.
   questions:
     - taxEvasion
