--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/conspiracyCorruptionBribery.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/conspiracyCorruptionBribery.yml
@@ -8,4 +8,4 @@ question: >
     - section 113 of the Representation of the People Act 1983
     - any other offence within the meaning of article 57(1) of the Public Contracts Directive as defined by the law of any jurisdiction outside England and Wales and Northern Ireland
 type: boolean
-hint: Answer 'yes' if anyone who represents your organisation or partner organisation has been convicted of any of the above
+hint: Answer 'yes' if anyone who represents your organisation or partner organisation has been convicted of any of the above.
