Test ALL questions and manifests against schemas
This commit
- adds a schema for manifest files
- rewrites the tests so that a schema for messages could easily be added in
  the future

This also changes the tests to use pytest.parameterize instead of a loop. This
means that the tests report how many files they are checking, where before they
could look to be passing but actually not reading any files.

--- a/frameworks/g-cloud-6/manifests/edit_service.yml
+++ b/frameworks/g-cloud-6/manifests/edit_service.yml
@@ -1,18 +1,18 @@
 -
   name: Service attributes
-  editable: false
+  editable: False
   questions:
     - id
     - lot
 -
   name: Description
-  editable: edit
+  editable: True
   questions:
     - serviceName
     - serviceSummary
 -
   name: Features and benefits
-  editable: edit
+  editable: True
   questions:
     - serviceFeatures
     - serviceBenefits
