--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/termsAndConditions.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/termsAndConditions.yml
@@ -1,2 +1,2 @@
-question: Do you accept the terms and conditions as described in the [framework agreement and call-off contract documents](/suppliers/frameworks/digital-outcomes-and-specialists/files/digital-outcomes-and-specialists-supplier-pack.zip)?
+question: Do you accept the terms and conditions in the [framework agreement and call-off contract documents](/suppliers/frameworks/digital-outcomes-and-specialists/files/digital-outcomes-and-specialists-supplier-pack.zip)?
 type: boolean
