--- a/frameworks/g-cloud-7/questions/services/lot.yml
+++ b/frameworks/g-cloud-7/questions/services/lot.yml
@@ -3,7 +3,7 @@ type: radios
 options:
   -
     label: Infrastructure as a Service (IaaS)
-    value: IaaS
+    value: iaas
     description: >
       Infrastructure is the hardware that makes software work. It’s the
       networks, hosting facilities and servers that platforms and software
@@ -11,21 +11,21 @@ options:
       the internet, without having to pay for your own hardware.
   -
     label: Software as a Service (SaaS)
-    value: SaaS
+    value: saas
     description: >
       SaaS is an application or service that can be run over the internet or
       in the cloud. Examples of SaaS include web-based email services,
       customer relationship management (CRM) software and analytics tools.
   -
     label: Platform as a Service (PaaS)
-    value: PaaS
+    value: paas
     description: >
       PaaS is a software platform that provides a basis for building other
       services and applications. With PaaS, you can set up, order, pay for
       and manage platforms in the cloud.
   -
     label: Specialist Cloud Services (SCS)
-    value: SCS
+    value: scs
     description: >
       Specialist Cloud Services support your transition to SaaS, PaaS and
       IaaS. Examples of SCS include cloud strategy, data transfer between
