--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/sufficientInformation.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/sufficientInformation.yml
@@ -1,4 +1,4 @@
 question: >
-  Do you agree to have gathered sufficient information to fully understand the requirements of this procurement? 
+  Do you agree to collect and read all the information you need to fully understand the requirements of this procurement? 
    
 type: boolean
