--- a/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
@@ -1,6 +1,10 @@
 -
   name: Essentials
   editable: True
+  description: >
+    You must make this declaration to apply to Digital Outcomes and
+    Specialists. You can come back and change your answers at any time before
+    the deadline.
   questions:
     - termsOfParticipation
     - termsAndConditions
