--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/requisiteAuthority.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/requisiteAuthority.yml
@@ -1,3 +1,3 @@
 question: >
-  Has all the required authority to compete in this procurement and sign the framework agreement been sought?
+  Have you got all the approvals you need to compete in this procurement and sign the framework agreement?
 type: boolean
