--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/subcontractorInformation2.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/subcontractorInformation2.yml
@@ -3,9 +3,9 @@ question: >
   
     - shared your application prices with anyone other than the Crown Commercial Service
     - entered into any arrangement with another person so that person refrains from submitting an application
-    - given access to information relating to the application to another person, or offered or given payment to another person
+    - given access to information relating to the application to another person, or offered or given payment to another person in exchange for information
     - given inducement or valuable consideration to another person (except where such communication takes place with people who are also participants in the application, or where disclosure is made in confidence to obtain necessary information or security for the application)
-    - canvassed any government agent regarding this procurement or attempted to buy any information from them regarding the procurement
+    - canvassed, or attempted to buy information from, any government agent about this procurement 
     
 type: boolean
 
