--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/permanentMemberOfStaff.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/permanentMemberOfStaff.yml
@@ -1,3 +1,3 @@
 question: >
-  Does your organisation have at least one permanent member of staff who delivers each of the services offered?
+  Does your organisation have at least one permanent member of staff who delivers each of the services you're submitting?
 type: boolean
