--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/MI.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/MI.yml
@@ -1,2 +1,2 @@
-question: Do you confirm that you’re prepared to provide all Digital Outcomes and Specialists-related management information (MI) to CCS as outlined in the framework agreement?
+question: Do you confirm that you’re prepared to provide all Digital Outcomes and Specialists-related management information (MI) to CCS as outlined in the [framework agreement](/suppliers/frameworks/digital-outcomes-and-specialists/files/digital-outcomes-and-specialists-supplier-pack.zip)?
 type: boolean
