--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/safeguardPersonalData.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/safeguardPersonalData.yml
@@ -1,2 +1,2 @@
-question: Do you agree to safeguard personal data and official government information according to the government guidance on [data protection and your business](https://www.gov.uk/data-protection-your-business)?
+question: Do you agree to protect personal data and official government information according to the government guidance on [data protection and your business](https://www.gov.uk/data-protection-your-business)?
 type: boolean
