--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/cyberEssentials.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/cyberEssentials.yml
@@ -1,3 +1,3 @@
 question: Are you certified to the Cyber Essentials level under the [Cyber Essentials scheme](https://www.gov.uk/government/publications/cyber-essentials-scheme-overview)?
 type: boolean
-hint: "This is to establish how you safeguard your organisation against cyber attacks. (Optional.)"
+hint: "This is to establish how you protect your organisation against cyber attacks. (Optional.)"
