--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/skillsAndCapabilityAssessment.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/skillsAndCapabilityAssessment.yml
@@ -1,2 +1,2 @@
-question: Do you assess the skills and capability of people you select to work for your company and could you provide evidence on request of how you do this?
+question: Do you assess the skills and capabilities of people you select to work for your company and could you provide evidence of how you do this, if requested?
 type: boolean
