--- a/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
@@ -4,7 +4,7 @@
   questions:
     - termsOfParticipation
     - termsAndConditions
-    - davidKershaw
+    - 10WorkingDays
     - sufficientInformation
     - informationChanges
     - requisiteAuthority
