--- a/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
@@ -4,7 +4,7 @@
   description: >
     You must make this declaration to apply to Digital Outcomes and
     Specialists. You can come back and change your answers at any time before
-    the deadline.
+    14 February 2016.
   questions:
     - termsOfParticipation
     - termsAndConditions
