--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/subcontractorInformation1.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/subcontractorInformation1.yml
@@ -4,4 +4,4 @@ question: >
     - all the information in the application that relates to them is accurate 
     - you will notify the Crown Commercial Service of any changes to the information you've provided as soon as possible
 type: boolean
-hint: If you are not using a subcontractor or consortium, go to [[readUnderstoodGuidance]].
+hint: If you are not using a subcontractor or consortium, go to question [[readUnderstoodGuidance]].
