--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/canProvideFromDayOne.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/canProvideFromDayOne.yml
@@ -1,3 +1,3 @@
 question: >
-  If your appplication is successful, can you provide all the services you're submitting to Digital Outcomes and Specialists from the first day you're awarded a place on the framework?
+  If your application is successful, can you provide all the services you're submitting to Digital Outcomes and Specialists from the first day you're awarded a place on the framework?
 type: boolean
