Move lot-specific questions out of declaration
This commit:
- moves these questions in the filesystem and the manifest
- adds the "depends" key to indicate which lots they should be shown for

--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_submission.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_submission.yml
@@ -7,8 +7,19 @@
 - name: Supplier information
   editable: True
   questions:
-    - specialistsSupplierInformation
-    - outcomesSupplierInformation
+    - userNeeds
+    - changesInNeeds
+    - framingNeeds
+    - freeAndOpenData
+    - bespokeSystemInformation
+    - openStandardsComponents
+    - openStandardsComponents
+    - governmentsDesire
+    - reusePurchasedAssets
+    - openStandardsPrinciples
+    - openSourceLicence
+    - incentives
+    - hideGovernment
 
 - name: Outcomes approach
   editable: true
