--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_submission.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_submission.yml
@@ -39,7 +39,7 @@
     - deliveryManagerLocations
 
 - name: Product manager
-  editbale: True
+  editable: True
   questions:
     - productManagerDayRate
     - productManagerLocations
