Use YAML array syntax

--- a/frameworks/digital-outcomes-and-specialists/questions/services/outcomesSupplierInformation.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/outcomesSupplierInformation.yml
@@ -2,4 +2,5 @@ type: text
 question: Some outcomes supplier information
 depends:
   - "on": lot
-    being: ["digital-outcomes"]
+    being:
+      - "digital-outcomes"
