--- a/frameworks/digital-outcomes-and-specialists/questions/services/specialistsApproachQuestion.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/specialistsApproachQuestion.yml
@@ -2,4 +2,5 @@ type: text
 question: A question for specialists
 depends:
   - "on": lot
-    being: ["digital-specialists"]
+    being:
+      - digital-specialists
