--- a/frameworks/digital-outcomes-and-specialists/questions/services/outcomesApproachQuestion.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/outcomesApproachQuestion.yml
@@ -2,4 +2,5 @@ type: text
 question: A question for outcomes
 depends:
   - "on": lot
-    being: ["digital-outcomes"]
+    being:
+      - digital-outcomes
