--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/employmentAgency.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/employmentAgency.yml
@@ -1,3 +1,3 @@
 question: >
-  Please confirm whether your company or any of your partner companies or subcontractors are an employment agency?
+  Please confirm whether your company or any of your partner companies or subcontractors are an employment agency.
 type: boolean
