Fix incorrectly unquoted "on" keys
If you use `on` as a key without quotes, YAML interprets it as a key/value
pair with `true` as the key. Bonkers.

This commit:
- quotes all the ons
- fixes options and validations items blocks in questions schema to catch
  incorrect keys

--- a/frameworks/digital-outcomes-and-specialists/questions/services/hideGovernment.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/hideGovernment.yml
@@ -3,6 +3,6 @@ question: >
   government department or agency you're working with?
 type: boolean
 depends:
-  - on: "lot"
+  - "on": "lot"
     being:
       - user-research-participants
