--- a/frameworks/digital-outcomes-and-specialists/questions/services/bespokeSystemInformation.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/bespokeSystemInformation.yml
@@ -2,7 +2,7 @@ question: >
   If you build bespoke systems, do you recognise, and can you ensure, that the data will continue to be available for future government use.
 type: boolean
 depends:
-  - on: "lot"
+  - "on": "lot"
     being:
       - digital-outcomes
       - digital-specialists
