--- a/frameworks/digital-outcomes-and-specialists/questions/services/changesInNeeds.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/changesInNeeds.yml
@@ -1,7 +1,7 @@
 question: Will you work with departments to respond rapidly and efficiently to changes in user needs?
 type: boolean
 depends:
-  - on: "lot"
+  - "on": "lot"
     being:
       - digital-outcomes
       - digital-specialists
