--- a/frameworks/digital-outcomes-and-specialists/questions/services/framingNeeds.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/framingNeeds.yml
@@ -8,7 +8,7 @@ question: >
 hint: Read the government service design manual to learn more about [how to define user needs](https://www.gov.uk/service-manual/user-centred-design/user-needs.html#how-we-define-user-needs).
 type: boolean
 depends:
-  - on: "lot"
+  - "on": "lot"
     being:
       - digital-outcomes
       - digital-specialists
