--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/10WorkingDays.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/10WorkingDays.yml
@@ -1,4 +1,4 @@
 question: >
-  Do you agree to sign the final framework agreement within 10 working days of it being issued by the Crown Commercial Service?
+  Do you agree to sign the final framework agreement, without changing it, within 10 working days of it being issued by the Crown Commercial Service?
    
 type: boolean
