--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/informationChanges.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/informationChanges.yml
@@ -1,4 +1,4 @@
 question: >
-  Do you agree to inform the Crown Commercial Service as soon as possible if there are any changes to the information you've provided?
+  Do you agree to inform the Crown Commercial Service as soon as possible if there are any changes to the information you're providing in this supplier declaration?
 type: boolean
 
