--- a/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
@@ -90,6 +90,10 @@
 -
   name: Working with government
   editable: True
+  description: >
+    You must be able to truthfully answer 'yes' to every question under 'Working with government' for your bid to be
+    considered eligible. If you can't answer 'yes' to every question in this
+    section, it's very unlikely that your bid will be accepted.
   questions:
     - MI
     - canProvideFromDayOne
@@ -104,6 +108,9 @@
 -
   name: Working with digital
   editable: True
+  description: >
+    You must be able to truthfully answer 'yes' to questions [technologyCodesOfPractice] to [safeguardPersonalData] under 'Working with digital' for your bid to be
+    considered eligible. If you can't answer 'yes', it's very unlikely that your bid will be accepted. You can answer 'yes' or 'no' to questions [cyberEssentials] and [cyberEssentialsPlus].
   questions:
     - technologyCodesOfPractice
     - serviceStandard
@@ -117,6 +124,8 @@
 -
   name: About you
   editable: True
+  description: >
+  The Crown Commercial Service will use the information you provide under 'About you' to process your application and manage your participation in the Digital and Commercial Specialists framework.
   questions:
     - primaryContact
     - primaryContactEmail
