--- a/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
@@ -109,8 +109,8 @@
   name: Working with digital
   editable: True
   description: >
-    You must be able to truthfully answer 'yes' to questions [technologyCodesOfPractice] to [safeguardPersonalData] under 'Working with digital' for your bid to be
-    considered eligible. If you can't answer 'yes', it's very unlikely that your bid will be accepted. You can answer 'yes' or 'no' to questions [cyberEssentials] and [cyberEssentialsPlus].
+    You must be able to truthfully answer 'yes' to questions [[technologyCodesOfPractice]] to [[safeguardPersonalData]] under 'Working with digital' for your bid to be
+    considered eligible. If you can't answer 'yes', it's very unlikely that your bid will be accepted. You can answer 'yes' or 'no' to questions [[cyberEssentials]] and [[cyberEssentialsPlus]].
   questions:
     - technologyCodesOfPractice
     - serviceStandard
