Add serviceName question for user research studios
Sets serviceName to be the first question so that every created
draft has a name to display in the service list, similar to G7.

Question is copied from the current prototype.

--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_submission.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_submission.yml
@@ -1,8 +1,8 @@
 -
-  name: Service attributes
-  editable: false
+  name: Studio name
+  editable: True
   questions:
-    - lot
+    - serviceName
 
 - name: Supplier information
   editable: True
