--- a/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
@@ -21,6 +21,8 @@
     - skillsAndResources
     - accuratelyDescribed
     - employersInsurance
+    - offerServicesYourselves
+    - fullAccountability
 
 -
   name: Grounds for mandatory exclusion
@@ -37,7 +39,6 @@
     Check that your organisation complies with [Regulation 57(1) of the Public
     Contracts Regulations 2015](http://www.legislation.gov.uk/uksi/2015/102/regulation/57/made).
   questions:
-    - employmentAgency
     - conspiracyCorruptionBribery
     - fraudAndTheft
     - terrorism
