--- a/frameworks/digital-outcomes-and-specialists/questions/services/bespokeSystemInformation.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/bespokeSystemInformation.yml
@@ -1,5 +1,4 @@
-question: >
-  If you build bespoke systems, do you recognise, and can you ensure, that the data will continue to be available for future government use.
+question: Will you share bespoke system information from the service you’re working on, eg software performance data, to help the government continuously improve its services?
 type: boolean
 depends:
   - "on": "lot"
