Add specialist roles questions and a generator script
Since specialist questions share the same structure, they're easier
to generate with a script. Commiting the script in case the location
options or any other common properties change in the future.

--- a/frameworks/digital-outcomes-and-specialists/questions/services/developerLocations.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/developerLocations.yml
@@ -1,4 +1,8 @@
-question: "Location you can provide services to"
+question: Where will your developer work?
+depends:
+  - "on": lot
+    being:
+      - digital-specialists
 type: checkboxes
 options:
   - label: "Scotland"
