--- a/frameworks/digital-outcomes-and-specialists/questions/services/performanceAnalystLocations.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/performanceAnalystLocations.yml
@@ -1,4 +1,4 @@
-question: Where will your product manager work?
+question: Where will your performance analyst work?
 depends:
   - "on": lot
     being:
