--- a/frameworks/digital-outcomes-and-specialists/questions/services/securityConsultantLocations.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/securityConsultantLocations.yml
@@ -1,4 +1,4 @@
-question: Where will your cyber security specialist work?
+question: Where will your cyber security consultant work?
 depends:
   - "on": lot
     being:
