Fix typos in agileCoach and serviceName dos questions

--- a/frameworks/digital-outcomes-and-specialists/questions/services/agileCoachDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/agileCoachDayRate.yml
@@ -1,4 +1,4 @@
-question: How much do you charge per day for a agile coach?
+question: How much do you charge per day for an agile coach?
 depends:
   - "on": lot
     being:
