Rename outcomes and specialists essentials section to "Service essentials"

--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_submission.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_submission.yml
@@ -4,7 +4,7 @@
   questions:
     - serviceName
 
-- name: Digital outcomes and specialists essentials
+- name: Service essentials
   editable: True
   questions:
     - helpGovernmentImproveServices
