Fix duplicate "User reserach" dos specialists section

--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_submission.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_submission.yml
@@ -126,7 +126,7 @@
     - userResearcherLocations
     - userResearcherDayRate
 
-- name: User researcher
+- name: Web operations engineer
   editable: True
   questions:
     - webOperationsLocations
