--- a/frameworks/g-cloud-6/questions/services/identityStandards.yml
+++ b/frameworks/g-cloud-6/questions/services/identityStandards.yml
@@ -5,7 +5,7 @@ depends:
       - SaaS
       - saas
 hint: 'Examples of identity standards include OAuth and SAML. (Optional.)'
-listItemName: 'identity standards example'
+list_item_name: 'identity standards example'
 type: list
 addthing: 'Add another standard'
 validations:
