--- a/frameworks/g-cloud-6/questions/services/serviceBenefits.yml
+++ b/frameworks/g-cloud-6/questions/services/serviceBenefits.yml
@@ -11,7 +11,7 @@ depends:
       - iaas
       - SCS
       - scs
-listItemName: 'service benefit'
+list_item_name: 'service benefit'
 type: list
 addthing: 'Add another business benefit'
 validations:
