--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/subcontractorInformation2.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/subcontractorInformation2.yml
@@ -1,5 +1,5 @@
 question: >
-  If you are using a subcontractor or consortium or both, please confirm that no party has:
+  Please confirm that no party has:
   
     - shared your application prices with anyone other than the Crown Commercial Service
     - entered into any arrangement with another person so that person refrains from submitting an application
