--- a/frameworks/digital-outcomes-and-specialists/messages/homepage-sidebar.yml
+++ b/frameworks/digital-outcomes-and-specialists/messages/homepage-sidebar.yml
@@ -17,7 +17,7 @@ coming:
     [Create an account](https://www.digitalmarketplace.service.gov.uk/suppliers/create) to receive an email when Digital Outcomes and Specialists opens.
 
 
-    If you already have an account you’ll be notified by email when Digital Outcomes and Specialists opens.
+    If you already have an account we’ll email you when Digital Outcomes and Specialists opens.
 
 
     [Find out if your services are suitable](https://digitalmarketplace.blog.gov.uk/2015/11/12/digital-outcomes-and-specialists-suitable-suppliers-and-services/)
