--- a/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
@@ -12,8 +12,8 @@
     - sufficientInformation
     - informationChanges
     - requisiteAuthority
-    - subcontractorInformation1
-    - subcontractorInformation2
+    - accurateInformation
+    - unfairCompetition
     - readUnderstoodGuidance
     - understandTool
     - understandHowToAskQuestions
