Fix example of outcomes
This was changed for the `open` state; it should also have been changed for the `coming` state.

--- a/frameworks/digital-outcomes-and-specialists/messages/homepage-sidebar.yml
+++ b/frameworks/digital-outcomes-and-specialists/messages/homepage-sidebar.yml
@@ -8,7 +8,7 @@ coming:
     You can apply to provide:
 
       - digital outcomes,
-        eg a discovery phase for an online billing application
+        eg delivering the beta phase of an NHS booking system
       - digital specialists,
         eg service managers or developers
       - user research studios
