Update schemas with new question and manifest keys
Adds multiquestion question type and `name`, `questions`, and
`empty_message` fields.

Adds additional schema validation to check that `questions` is only
valid for `multiquestion` questions, and `fields` is only valid for
`pricing`.

Adds `edit_questions` key to the manifest schema.

--- a/schemas/manifests.json
+++ b/schemas/manifests.json
@@ -11,6 +11,9 @@
       "editable": {
         "type": "boolean"
       },
+      "edit_questions": {
+        "type": "boolean"
+      },
       "questions": {
         "type": "array",
         "items": {
