--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
 docopt==0.4.0
+git+https://github.com/madzak/python-json-logger.git@v0.1.3#egg=python-json-logger==v0.1.3
 git+https://github.com/alphagov/digitalmarketplace-utils.git@13.2.0#egg=digitalmarketplace-utils==13.2.0
