Split lab address into three separate fields

--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_submission.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_submission.yml
@@ -57,10 +57,16 @@
     - userResearcher
     - webOperations
 
+- name: Address
+  editable: True
+  questions:
+    - labAddressBuilding
+    - labAddressTown
+    - labAddressPostcode
+
 - name: Location
   editable: True
   questions:
-    - labAddress
     - labPublicTransport
     - labCarPark
     - recruitLocations
