--- a/frameworks/digital-outcomes-and-specialists/questions/services/labAddressBuilding.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/labAddressBuilding.yml
@@ -1,4 +1,5 @@
-question: Address
+question: Building and street
+hint: This should be the address of the building where your lab is.
 
 depends:
   - "on": lot
