--- a/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/declaration.yml
@@ -134,7 +134,7 @@
     - tradingStatusOther
     - tradingNames
     - firstRegistered
-    - firstRegisteredCountry
+    - currentRegisteredCountry
     - companyRegistrationNumber
     - registeredVATNumber
     - establishedInTheUK
