Add "Service Design" to user experience types

--- a/frameworks/digital-outcomes-and-specialists/questions/services/userExperienceAndDesignTypes.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/userExperienceAndDesignTypes.yml
@@ -12,4 +12,5 @@ options:
   - label: Information architecture
   - label: Interaction design
   - label: Prototyping
+  - label: Service design
   - label: User experience and design strategy
