--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/establishedInTheUK.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/establishedInTheUK.yml
@@ -1,3 +1,3 @@
 question: Was your business established in the UK?
-type: text
-hint: If you answered ‘yes’ to question [[establishedInTheUK]], please move on to question [[organisationSize]].
+type: boolean
+hint: If you answer ‘yes’ to this question, please move on to question [[organisationSize]].
